--- a/index.html
+++ b/index.html
@@ -23,8 +23,6 @@
         <p>
           Lorem ipsum dolor sit, amet consectetur adipisicing elit. Placeat a
           est ratione deserunt id, aut accusantium optio et sapiente minus
-          veritatis quo reprehenderit facilis praesentium quis? Quasi corporis
-          eligendi labore.
         </p>
         <button>Sign Up</button>
       </div>
@@ -37,7 +35,7 @@
       </div>
     </div>
     <div class="main">
-      <h2>Some random information</h2>
+      <h2>Some random information.</h2>
       <div class="card-container">
         <div class="card">
           <img
@@ -48,7 +46,6 @@
           />
           <p class="card-text">
             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer
-            egestas, dolor eu rutrum luctus, sem.
           </p>
         </div>
         <div class="card">
@@ -60,7 +57,6 @@
           />
           <p class="card-text">
             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer
-            egestas, dolor eu rutrum luctus, sem.
           </p>
         </div>
         <div class="card">
@@ -72,7 +68,6 @@
           />
           <p class="card-text">
             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer
-            egestas, dolor eu rutrum luctus, sem.
           </p>
         </div>
         <div class="card">
@@ -84,26 +79,27 @@
           />
           <p class="card-text">
             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer
-            egestas, dolor eu rutrum luctus, sem.
           </p>
         </div>
       </div>
     </div>
     <div class="testimonial">
       <blockquote>
-        <p>
+        <p class="testimonial-text">
           Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec ornare
           nisi velit, at cursus elit tristique molestie. Nam at facilisis dui.
           Duis nunc elit, eleifend.
         </p>
-        <p>-Lorem ipsum generator</p>
+        <p class="testimonial-author">-Lorem ipsum generator</p>
       </blockquote>
     </div>
-    <div class="footer">
-      <div class="footer-left"></div>
-      <p class="footer-heading">Call to action!</p>
-      <p>Sign up for our product by clicking that button over there!</p>
+    <div class="call-to-action">
+      <div class="cta-left">
+        <h4 class="cta-heading">Call to action!</h4>
+        <p>Sign up for our product by clicking that button over there!</p>
+      </div>
       <button>Sign up</button>
     </div>
+    <div class="footer"><p>Copyright &copy; Information</p></div>
   </body>
 </html>
